add post more...

--- a/blog/posts/2019-10-18-MongoDB.md
+++ b/blog/posts/2019-10-18-MongoDB.md
@@ -5,11 +5,8 @@ draft: false
 tags: [MongoDB]
 categories: [🎁 初体验]
 ---
-**最后更新时间：2020 年 1 月 30 日**
-
----
 [MongoDB](https://www.mongodb.com/) 是一个基于分布式文件存储的数据库，是目前前端开发中使用较多的非关系数据库之一。
-
+<!-- more -->
 ## 下载
 ### 官网下载
 [官网下载地址](https://www.mongodb.com/download-center/enterprise)，如下图，选择你所需要的 MongoDB 版本就好
