--- a/blog/posts/2019-10-19-zsh.md
+++ b/blog/posts/2019-10-19-zsh.md
@@ -5,10 +5,7 @@ draft: false
 tags: [zsh,oh-my-zsh]
 categories: [🛠 高效工具]
 ---
-**最后更新时间：2020 年 3 月 10 日**
-
----
-本文旨记录环境配置的命令行，对于 zsh 和 oh-my-zsh 不熟悉，请自行百度～
+本文旨记录环境配置的命令行，对于 zsh 和 oh-my-zsh 不熟悉，请自行百度～<!-- more -->
 
 1. 更新系统资源列表：`sudo apt-get update`
 
