--- a/blog/posts/2020-02-03-typora使用体验.md
+++ b/blog/posts/2020-02-03-typora使用体验.md
@@ -9,7 +9,7 @@ categories: [🛠 高效工具]
 
 ![image-20200205003915313](https://tva1.sinaimg.cn/large/006tNbRwgy1gbkueaafplj307w06u74k.jpg)
 
-使用平台：macOS，整篇文章谈论的都是 macOS 平台的使用体验，Windows PC 上的 Typora 可能会略有不同～
+使用平台：macOS，整篇文章谈论的都是 macOS 平台的使用体验，Windows PC 上的 Typora 可能会略有不同～<!-- more -->
 
 ---
 
