--- a/blog/posts/2020-06-27-Docker编译时报137错误代码.md
+++ b/blog/posts/2020-06-27-Docker编译时报137错误代码.md
@@ -11,7 +11,7 @@ categories: [🐛 BUG集锦]
 
 ![image-20200627001641215](https://tva1.sinaimg.cn/large/007S8ZIlly1gg65cv48ayj319p0u0tif.jpg)
 
-报错: `error Command failed with exit code 137 ` 
+报错: `error Command failed with exit code 137 ` <!-- more -->
 
 ## 环境说明
 
