--- a/blog/posts/2020-08-31-408.md
+++ b/blog/posts/2020-08-31-408.md
@@ -8,7 +8,7 @@ categories: [📗 学习笔记]
 
 如题，在复习计算机考研 408 专业课的过程中，我将产出的代码，笔记以及思维导图等做成了一个开源项目。本项目建立至今一月有余，期间也获得了许多研友的 Stars ⭐️ 支持，非常感谢。这也是我第一次独立建立一个开源项目，建立过程中的体验很奇妙，值得书写一篇文章记录一下。下面先给出项目地址：
 
-🚀 GitHub地址：[https://github.com/KimYangOfCat/CSPostgraduate-408-2021](https://github.com/KimYangOfCat/CSPostgraduate-408-2021)，欢迎各位大佬 Stars 🌟 ～ 
+🚀 GitHub地址：[https://github.com/KimYangOfCat/CSPostgraduate-408-2021](https://github.com/KimYangOfCat/CSPostgraduate-408-2021)，欢迎各位大佬 Stars 🌟 ～ <!-- more -->
 
 长文提示：本文只是单纯记录整个开源过程中的个人感受，以及简单对项目相关内容及技术进行简要介绍，并无太多技术相关细节嗷~
 
