--- a/blog/posts/2021-04-10-webpack入门篇.md
+++ b/blog/posts/2021-04-10-webpack入门篇.md
@@ -5,7 +5,7 @@ tags: [webpack,前端]
 categories: [📗 学习笔记]
 ---
 
-虽然在本文写作的时候，webpack5已经发布，但是由于学习的资料是 webpack4.x 版本，所以此处总结的用法也是webpack4.x 中的配置方法，在webpack5中，可能有所不同，但是其中基本的概念还是不变的，故对于初学者来说，本文仍旧值得一读。
+虽然在本文写作的时候，webpack5已经发布，但是由于学习的资料是 webpack4.x 版本，所以此处总结的用法也是webpack4.x 中的配置方法，在webpack5中，可能有所不同，但是其中基本的概念还是不变的，故对于初学者来说，本文仍旧值得一读。<!-- more -->
 
 ## 一、 基本概念
 
