--- a/blog/posts/2021-04-11-38.外观数列.md
+++ b/blog/posts/2021-04-11-38.外观数列.md
@@ -13,7 +13,7 @@ categories: [📝 算法题解]
 
 给定一个正整数 `n` ，输出外观数列的第 `n` 项。
 
-「外观数列」是一个整数序列，从数字 1 开始，序列中的每一项都是对前一项的描述。
+「外观数列」是一个整数序列，从数字 1 开始，序列中的每一项都是对前一项的描述。<!-- more -->
 
 你可以将其视作是由递归公式定义的数字字符串序列：
 
