--- a/blog/posts/2021-04-14-webpack优化篇.md
+++ b/blog/posts/2021-04-14-webpack优化篇.md
@@ -7,7 +7,7 @@ categories: [📗 学习笔记]
 
 本文的所有前端性能优化，都是基于webpack 的配置优化实现的。其他前端打包器配置可能有所不同，但是其中的优化方向以及优化思路都是一致的，值得学习了解一二。
 
-本文主要从开发环境和生产环境两个方面去优化webpack配置文件，毕竟这两个环境优化的目的有所不同，开发环境优化的目的是尽可能提升编程时的体验，帮助我们尽快定位BUG等等，而生产环境却更在意的是提升生产代码的性能，加快代码编译速度等等。
+本文主要从开发环境和生产环境两个方面去优化webpack配置文件，毕竟这两个环境优化的目的有所不同，开发环境优化的目的是尽可能提升编程时的体验，帮助我们尽快定位BUG等等，而生产环境却更在意的是提升生产代码的性能，加快代码编译速度等等。<!-- more -->
 
 ## 开发环境优化
 
