--- a/blog/posts/2021-04-15-1779.找到最近的有相同x或y坐标的点.md
+++ b/blog/posts/2021-04-15-1779.找到最近的有相同x或y坐标的点.md
@@ -15,7 +15,7 @@ categories: [📝 算法题解]
 
 请返回距离你当前位置 **曼哈顿距离** 最近的 **有效** 点的下标（下标从 **0** 开始）。如果有多个最近的有效点，请返回下标 **最小** 的一个。如果没有有效点，请返回 `-1` 。
 
-两个点 `(x1, y1)` 和 `(x2, y2)` 之间的 **曼哈顿距离** 为 `abs(x1 - x2) + abs(y1 - y2)` 。
+两个点 `(x1, y1)` 和 `(x2, y2)` 之间的 **曼哈顿距离** 为 `abs(x1 - x2) + abs(y1 - y2)` 。<!-- more -->
 
  
 
