--- a/blog/posts/2021-04-24-1832.判断句子是否为全字母句.md
+++ b/blog/posts/2021-04-24-1832.判断句子是否为全字母句.md
@@ -15,7 +15,7 @@ categories: [📝 算法题解]
 
 给你一个仅由小写英文字母组成的字符串 `sentence` ，请你判断 `sentence` 是否为 **全字母句** 。
 
-如果是，返回 `true` ；否则，返回 `false` 。 
+如果是，返回 `true` ；否则，返回 `false` 。 <!-- more -->
 
 **示例 1：**
 
