--- a/blog/posts/2021-04-26-开启算法题解之路.md
+++ b/blog/posts/2021-04-26-开启算法题解之路.md
@@ -6,7 +6,8 @@ categories: [📝 算法题解]
 ---
 ## 为什么要写题解？
 
-Hello，大家好，我是金戈。很多朋友关注我，可能是因为我整理的一个有关考研专业课 408 的开源项目。同时我也写了一篇关于这个开源项目的叙述文章——[《将考研专业课 408 复习过程开源是种什么体验？》](http://mp.weixin.qq.com/s?__biz=MzUzNDgwMDI4OA==&mid=2247483710&idx=1&sn=9d1607ac82f8d9d24e3fab7da2d8d907&chksm=fa8e73f1cdf9fae788199985fee4cef5c6fb80647e5df66601fb44ebc86ff396167029377070&scene=21#wechat_redirect)，有兴趣的小伙伴可以去了解一二。
+Hello，大家好，我是 Kim。很多朋友关注我，可能是因为我整理的一个有关考研专业课 408 的开源项目。同时我也写了一篇关于这个开源项目的叙述文章——[《将考研专业课 408 复习过程开源是种什么体验？》](http://mp.weixin.qq.com/s?__biz=MzUzNDgwMDI4OA==&mid=2247483710&idx=1&sn=9d1607ac82f8d9d24e3fab7da2d8d907&chksm=fa8e73f1cdf9fae788199985fee4cef5c6fb80647e5df66601fb44ebc86ff396167029377070&scene=21#wechat_redirect)，有兴趣的小伙伴可以去了解一二。
+<!-- more -->
 
 其实，408 里面的数据结构这门课程与算法是息息相关的，可以说是入门算法必学的课程。这门课程在大多数高校的计算机专业中都会开设，我是大二的时候学习的这门课程，但是学的时候更多是为了应对考试，并没有去做太多的探索，也就没有了解到更有意思的算法；当事人表示十分的后悔！😩 后来复习考研专业课的时候，才逐渐了解到算法相关的内容，距今也有小半年的时间了。在这段时间中，我个人的成长和转变是非常大的，从最开始的踌躇满志，继而一脸懵闭，开始怀疑人生，然后偶得启发，到现在小有收获。
 
