--- a/blog/posts/2021-05-02-Mint.md
+++ b/blog/posts/2021-05-02-Mint.md
@@ -7,7 +7,7 @@ categories: [🌏 翻译校对]
 
 ![图片由 [Unsplash](https://unsplash.com/s/photos/mint-cocktail?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText) 用户 [Luca Volpe](https://unsplash.com/@lucavolpe?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)提供。](https://cdn-images-1.medium.com/max/13440/1*-AzcPWEeQ7lrNOGm9VWHVA.jpeg)
 
-最近, 我用 [Mint](https://www.mint-lang.com/) 构建了一个小型的 Web 应用程序, 正如大家所说的那样，这确实是一次**全新**的开发体验。毕竟对于构建 Web 应用来说的，Mint 是一个相对没有那么主流的编程语言。同时它也是一门强类型语言，可以被编译为 JavaScript，并且内置了许多重要的功能。
+最近, 我用 [Mint](https://www.mint-lang.com/) 构建了一个小型的 Web 应用程序, 正如大家所说的那样，这确实是一次**全新**的开发体验。毕竟对于构建 Web 应用来说的，Mint 是一个相对没有那么主流的编程语言。同时它也是一门强类型语言，可以被编译为 JavaScript，并且内置了许多重要的功能。<!-- more -->
 
 以上所有这些都意味着，使用 Mint，你可以**非常快速地**构建 Web 应用。
 
