--- a/blog/posts/2021-05-16-快停止在CSS中使用像素单位.md
+++ b/blog/posts/2021-05-16-快停止在CSS中使用像素单位.md
@@ -7,7 +7,7 @@ categories: [🌏 翻译校对]
 
 ![图源 [Alexander Andrews](https://unsplash.com/@alex_andrews?utm_source=medium&utm_medium=referral)，出自 [Unsplash](https://unsplash.com?utm_source=medium&utm_medium=referral).](https://cdn-images-1.medium.com/max/12450/0*5eX8OB4YTWwqM1RV)
 
-为什么 Web 开发者如此盲目地使用 px 单位？这只是一个坏习惯吗？是因为缺乏其他单位的知识吗？也许是因为设计团队的模拟依赖于 px 和 pt？目前我们也无法明白为什么像素是大多数团队当前的首选单位。
+为什么 Web 开发者如此盲目地使用 px 单位？这只是一个坏习惯吗？是因为缺乏其他单位的知识吗？也许是因为设计团队的模拟依赖于 px 和 pt？<!-- more -->目前我们也无法明白为什么像素是大多数团队当前的首选单位。
 
 也许，主要原因是它看起来简单方便。凭直觉，我们认为我们了解此单位，因为它看起来好像在映射像素屏幕。
 
