--- a/blog/posts/2021-05-19-ECMAScript2021.md
+++ b/blog/posts/2021-05-19-ECMAScript2021.md
@@ -8,7 +8,7 @@ categories: [🌏 翻译校对]
 在本文中，我们将通过一些示例代码向大家介绍 ECMAScript 2021 最新版本的功能。
 
 ![](https://cdn-images-1.medium.com/max/2000/1*ex1pND6jnzW3Hj2vjRjaDA.jpeg)
-
+<!-- more -->
 ## 新的功能
 
 ### 1. String.replaceAll( )
