--- a/blog/posts/2021-05-22-如何阅读一份提案草案.md
+++ b/blog/posts/2021-05-22-如何阅读一份提案草案.md
@@ -5,7 +5,7 @@ tags: [ECMA,前端]
 categories: [🌏 翻译校对]
 ---
 
-每个处于第二阶段或更高阶段的提案都有一个规范文本草案，存储在 `https://tc39.es/proposal-<name>`。这些草案都是供实现该功能时所参考的权威定义；README 或 Issue 中的内容或讨论可能会引用这份草案作为背景。
+每个处于第二阶段或更高阶段的提案都有一个规范文本草案，存储在 `https://tc39.es/proposal-<name>`。这些草案都是供实现该功能时所参考的权威定义；README 或 Issue 中的内容或讨论可能会引用这份草案作为背景<!-- more -->。
 
 提案规范文本的表达可能会与[当前规范的草案](https://tc39.es/ecma262)有所不同，也可能会对某些其他提案有所添加。当添加一个全新的章节时，它不会突出显示，但是当修改现有章节时，它们会以绿色突出显示，强调是插入的内容，而红色的标识则表示删除。
 
