--- a/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
+++ b/blog/posts/2021-05-24-使用GPU.js让你的Angular.js提速10倍.md
@@ -9,7 +9,7 @@ categories: [🌏 翻译校对]
 
 对于开发者来说，提高程序的性能是永恒的目标。但当程序中的计算任务很大时，我们可优化的选项很少，因为这些计算任务主要依赖 CPU 的性能。
 
-那么，如果我们将 GPU 的性能跟 Web 应用程序结合，情况会是怎样的呢？
+那么，如果我们将 GPU 的性能跟 Web 应用程序结合，情况会是怎样的呢？<!-- more -->
 
 在本文中，我会向你展示使用 [GPU.js](https://github.com/gpujs/gpu.js) 将 GPU 性能跟你的 Angular 程序集成的步骤。我也会进行性能的比较，讨论应当在何种情况下利用 GPU 的性能进行程序开发。
 
