--- a/blog/posts/2021-05-27-如何提出有用的反馈.md
+++ b/blog/posts/2021-05-27-如何提出有用的反馈.md
@@ -5,7 +5,7 @@ tags: [ECMA,前端]
 categories: [🌏 翻译校对]
 ---
 
-不管是借助在线渠道或是在 TC39 会议中出席，我们始终会就提案提供反馈。以下的这些建议能够确保您的反馈意见是可行的和有帮助的。
+不管是借助在线渠道或是在 TC39 会议中出席，我们始终会就提案提供反馈。以下的这些建议能够确保您的反馈意见是可行的和有帮助的。<!-- more -->
 
 - 在所有提案反馈中遵循 TC39 [行为准则](https://tc39.es/code-of-conduct/)
 - 保持反馈的礼貌性、建设性和可行性。
