--- a/blog/posts/2021-05-29-如何写一个好的说明文件.md
+++ b/blog/posts/2021-05-29-如何写一个好的说明文件.md
@@ -5,7 +5,7 @@ tags: [ECMA,前端]
 categories: [🌏 翻译校对]
 ---
 
-每一个 TC39 提案都应该包含 README.md 文件来说明该提案目的和高层的发展方向。这篇由 W3C TAG 发布的[指南](https://github.com/w3ctag/w3ctag.github.io/blob/master/explainers.md)为网络规范提供了一个良好的入门说明。
+每一个 TC39 提案都应该包含 README.md 文件来说明该提案目的和高层的发展方向。这篇由 W3C TAG 发布的[指南](https://github.com/w3ctag/w3ctag.github.io/blob/master/explainers.md)为网络规范提供了一个良好的入门说明。<!-- more -->
 
 您浏览指南时会发现其中附加了一些关于如何书写 TC39 提案说明的建议，以及可能想在您的提案说明文件中引用的内容大纲。
 如果您想要浏览近期提案中优质的说明书文件，请看 [Promise.allSettled](https://github.com/tc39/proposal-promise-allSettled)，[Temporal proposal](https://github.com/tc39/proposal-temporal)，或者是 [RegExp Unicode property escapes](https://github.com/tc39/proposal-regexp-unicode-property-escapes)。
