--- a/blog/posts/2021-05-30-简述TC39提案的实现和交付.md
+++ b/blog/posts/2021-05-30-简述TC39提案的实现和交付.md
@@ -6,7 +6,7 @@ categories: [🌏 翻译校对]
 ---
 
 除了规范文本和一致性测试之外，还需要实现新的 JavaScript 特性，也就是 JS 引擎、转码器、工具、polyfills 等的代码，让开发者可以使用这些功能。实施者最终会从不同视角分析提案的每一个细节，这有助于验证 TC39 提案。
-
+<!-- more -->
 ## 阶段性流程的互动
 
 实施方案越早起草越好，不同的阶段表明了不同的稳定性和具体程度。许多实现使用运行时或编译时标志来打开或关闭 TC39 建议。这可能被用来管理不完整的实现，以及避免交付还处于早期阶段的开发者设计方案。
