--- a/blog/posts/2021-05-31-阶段3提案评审.md
+++ b/blog/posts/2021-05-31-阶段3提案评审.md
@@ -6,7 +6,7 @@ categories: [🌏 翻译校对]
 ---
 
 根据 [TC39 流程文档](https://tc39.es/process-document)，提案要从阶段 2 过渡到阶段 3，必须要评审人员和编辑小组在规范文档上签字。本文主要介绍阶段 3 的审核过程。
-
+<!-- more -->
 ## 选择评审人
 
 作为志愿者，阶段 3 的评审人员在 TC39 会议中讨论提案。如果提案准备就绪，提案的发起人可以在提案进入第二阶段的同一次会议上，要求委员会进行提案审查。规模较大的提案鼓励有多位评审人参与。因为不同的评审人员可以提供不同的评审视角。
