--- a/blog/posts/2021-06-01-CORS.md
+++ b/blog/posts/2021-06-01-CORS.md
@@ -6,7 +6,7 @@ categories: [🌏 翻译校对]
 ---
 
 了解同源策略和 CORS 的历史和演变，深入了解 CORS 和各种跨域访问的类型，并学习（一些）最佳实践。
-
+<!-- more -->
 ## 译者注：
 
 - 本篇中使用的浏览器为 FireFox 浏览器，代码演示结果和 Chrome 浏览器等略有差别。
