--- a/blog/posts/2021-06-02-使用CI-CD优化前端构建的五种策略.md
+++ b/blog/posts/2021-06-02-使用CI-CD优化前端构建的五种策略.md
@@ -8,7 +8,7 @@ categories: [🌏 翻译校对]
 
 ![](https://cdn-images-1.medium.com/max/2560/1*4QARtPZqNOK5peGb0vFLSg.jpeg)
 
-如今使用 CI/CD 工具是网页应用程序开发的一个必要条件。作为关键开发路径的一部分，加快构建系统的速度对于提高开发人员的生产效率是至关重要的。
+如今使用 CI/CD 工具是网页应用程序开发的一个必要条件。作为关键开发路径的一部分，加快构建系统的速度对于提高开发人员的生产效率是至关重要的。<!-- more -->
 
 因此，在这篇文章中，我们将带你了解五种使用 CI/CD 优化前端构建时间的不同策略。
 
