--- a/blog/posts/2021-06-07-修订后的参与TC39标准委员会的模式.md
+++ b/blog/posts/2021-06-07-修订后的参与TC39标准委员会的模式.md
@@ -6,6 +6,7 @@ categories: [🌏 翻译校对]
 ---
 
 ![](https://miro.medium.com/max/1020/1*EnBeLnKvRHmiHvbivS4jzg.jpeg)
+<!-- more -->
 
 <small>*图片来自民族学局提交给史密森学会秘书的年度报告（1881）*</small>
 
