--- a/blog/posts/2021-06-12-简述自动生成的社交媒体图片.md
+++ b/blog/posts/2021-06-12-简述自动生成的社交媒体图片.md
@@ -6,6 +6,7 @@ categories: [🌏 翻译校对]
 ---
 
 我[总是](https://css-tricks.com/tag/social-media-images/)在思考社交媒体图片的问题。当你在 Twitter、Facebook 或 iMessage 等平台分享链接时，这些图片是可以显示出来的。如果没有这些图片，你的链接基本上很难获取用户注意，因为它们能把一个小链接的普通帖子变成一个带有引人注目的图片的帖子，其有一个很大的可点击区域。在网站的所有图片中，社交媒体呈现的图片可能是该网站上浏览量最多、记忆度最高、网络需求量最大、排在首位的图片。
+<!-- more -->
 
 本质上是以下 HTML 使它们起作用：
 
