--- a/blog/posts/2021-04-08-lcp22.黑白方格画.md
+++ b/blog/posts/2021-04-08-lcp22.黑白方格画.md
@@ -14,7 +14,7 @@ categories: [📝 算法题解]
 
 小扣希望最终的成品上需要有 `k` 个黑色格子，请返回小扣共有多少种涂色方案。
 
-注意：两个方案中任意一个相同位置的格子颜色不同，就视为不同的方案。
+注意：两个方案中任意一个相同位置的格子颜色不同，就视为不同的方案。<!-- more -->
 
 **示例 1：**
 
