--- a/blog/posts/2021-04-19-53.最大子序和.md
+++ b/blog/posts/2021-04-19-53.最大子序和.md
@@ -10,7 +10,7 @@ categories: [📝 算法题解]
 
 ## 题目描述
 
-给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。 
+给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。 <!-- more -->
 
 **示例 1：**
 
