--- a/blog/posts/2021-04-20-58.最后一个单词的长度.md
+++ b/blog/posts/2021-04-20-58.最后一个单词的长度.md
@@ -12,7 +12,7 @@ categories: [📝 算法题解]
 ## 题目描述
 
 给你一个字符串 s，由若干单词组成，单词之间用空格隔开。返回字符串中最后一个单词的长度。如果不存在最后一个单词，请返回 0 。
-单词 是指仅由字母组成、不包含任何空格字符的最大子字符串。
+单词 是指仅由字母组成、不包含任何空格字符的最大子字符串。<!-- more -->
 
 **示例 1**：
 
