--- a/blog/posts/2021-04-22-66.加一.md
+++ b/blog/posts/2021-04-22-66.加一.md
@@ -15,7 +15,7 @@ categories: [📝 算法题解]
 
 最高位数字存放在数组的首位， 数组中每个元素只存储**单个**数字。
 
-你可以假设除了整数 0 之外，这个整数不会以零开头。
+你可以假设除了整数 0 之外，这个整数不会以零开头。<!-- more -->
 
 **示例 1：**
 
