--- a/blog/posts/2021-05-21-16px或更大的字体大小可以避免iOS的表单缩放问题.md
+++ b/blog/posts/2021-05-21-16px或更大的字体大小可以避免iOS的表单缩放问题.md
@@ -5,7 +5,7 @@ tags: [CSS,前端]
 categories: [🌏 翻译校对]
 ---
 
-[“今天我已经学到的” —— 我从乔什·科莫（Josh W. Comeau）的推特中学习到](https://twitter.com/joshwcomeau/status/1379782931116351490?s=12) 的东西真的是太棒了！！！如果 `<input>` 的 `font-size` 被设定为 `16px` 或更大，那么 iOS 上的 Safari 将正常聚焦到输入表单中。但是，一旦 `font-size` 等于或小于 `15px`，视图窗口就会放大并聚焦到该 `<input>`（或许是因为苹果认为字体太小，因此它会放大以帮助你更清楚地看到自己在做什么）。这个设计是用来增强可访问性的，如果你不想要，请确保 `<input>` 的字体足够大。
+[“今天我已经学到的” —— 我从乔什·科莫（Josh W. Comeau）的推特中学习到](https://twitter.com/joshwcomeau/status/1379782931116351490?s=12) 的东西真的是太棒了！！！如果 `<input>` 的 `font-size` 被设定为 `16px` 或更大，那么 iOS 上的 Safari 将正常聚焦到输入表单中。但是，一旦 `font-size` 等于或小于 `15px`，视图窗口就会放大并聚焦到该 `<input>`（或许是因为苹果认为字体太小，因此它会放大以帮助你更清楚地看到自己在做什么）。这个设计是用来增强可访问性的，如果你不想要，请确保 `<input>` 的字体足够大。<!-- more -->
 
 如果你想自己试试，请打开[乔什的 `codepen`](https://codepen.io/joshwcomeau/pen/VwPMPZo)。
 
