--- a/blog/posts/2021-06-03-向TC39提交提案.md
+++ b/blog/posts/2021-06-03-向TC39提交提案.md
@@ -7,7 +7,7 @@ categories: [🌏 翻译校对]
 
 ## 准备内容
 
-在 TC39 会议之前，请提供有关您的提案的公共文档。GitHub 是典型的解决方案 —— 提案的早期可能是个 Gist，小的提案可能会记录在 issue 或 PR（pull request）中，但是大型提案最好放在自己的 Github 仓库中（最初可以是个人仓库，但如果达到提案的第 1 阶段，则需要转移仓库到 tc39 组织中）。
+在 TC39 会议之前，请提供有关您的提案的公共文档。GitHub 是典型的解决方案 —— 提案的早期可能是个 Gist，小的提案可能会记录在 issue 或 PR（pull request）中，但是大型提案最好放在自己的 Github 仓库中（最初可以是个人仓库，但如果达到提案的第 1 阶段，则需要转移仓库到 tc39 组织中）。<!-- more -->
 
 您对 TC39 的提案应针对特定目的：仔细考虑您想与委员会沟通的内容以及您希望从演示文稿中获得的信息。可能的目标包括：
 - 将提案推进到特定阶段
