--- a/blog/posts/2021-06-10-如何参与会议.md
+++ b/blog/posts/2021-06-10-如何参与会议.md
@@ -5,6 +5,7 @@ tags: [ECMA,前端]
 categories: [🌏 翻译校对]
 ---
 TC39 会议规模可能会很大。有时可能得在一个房间里挤下 60 多人，并且还有一些人通过远程参与。正因为如此，我们在实践中总结了一些方法，让会议更易于管理，并让每个人都可以真正参与！
+<!-- more -->
 
 ## 行为准则
 
