--- a/blog/posts/2021-06-25-如何打造可被摇树优化的库.md
+++ b/blog/posts/2021-06-25-如何打造可被摇树优化的库.md
@@ -8,7 +8,7 @@ categories: [🌏 翻译校对]
 ![如何打造可被摇树优化的库](https://blog.theodo.com/static/dfae80d02f29938244fa328765a243a9/a79d3/tree-shaking.png)
 
 在 [Theodo](https://www.theodo.fr)，我们致力于为我们的客户打造可靠、快速的应用。我们有一些改进现有应用的性能的项目。在其中一个项目里，**我们通过对内部库进行摇树优化（tree shaking），成功将所有页面的 gzip 压缩后的 bundle 体积减少了足足 500KB。**
-
+<!-- more -->
 在做这件事的时候，我们意识到摇树优化并不是一种简单地开启或关闭就会奏效的技术。有很多因素会影响一个库的摇树优化效果。
 
 **本文的目标是为构建适配摇树优化的库提供详细的指导。其中的步骤的总结如下：**
