--- a/blog/posts/2021-07-08-纯CSS创建五彩斑斓的智能阴影.md
+++ b/blog/posts/2021-07-08-纯CSS创建五彩斑斓的智能阴影.md
@@ -8,7 +8,7 @@ categories: [🌏 翻译校对]
 几天前，我在 Home Depot（也就是大孩子的[玩具反斗城](http://en.wikipedia.org/wiki/Toys_R_Us)）处发现，他们有一个巨大的显示器来展示所有这些彩色的供销售的电灯泡！其中一项是一组在电视后面的智能灯泡。它们会在电视的后面投影近似于电视在播出的内容的彩色阴影，与以下内容 [类似](https://www.philips-hue.com/en-us/p/hue-play-hdmi-sync-box-/046677555221)：
 
 ![](https://www.kirupa.com/html5/images/lighting_behind_tv.png)
-
+<!-- more -->
 注意电视后面发生的事情。屏幕中所显示的颜色会被灯泡投影为电视机身后面的彩色阴影。随着屏幕上的颜色发生变化，投射在背景中的颜色也会发生变化。真的很酷，对吧？
 
 自然，看到这个之后，我的第一个想法是，我们是否可以使用 Web 技术创建一个足够智能以模仿前景色的彩色阴影。事实证明，我们完全可以只使用 CSS 构建出这个案例。在本文中，我们将了解如何创建这种效果。
