:sparkles: add algorithm src code

--- a/blog/algorithm/1832-判断句子是否为全字母句.md
+++ b/blog/algorithm/1832-判断句子是否为全字母句.md
@@ -216,3 +216,10 @@ var checkIfPangram = function (sentence) {
 + [leet-code 第 237 周-单周赛赛后总结](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/leet-code-di-237-zhou-dan-zhou-sai-sai-h-1ou1/)
 + [JS 去重排序](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-qu-zhong-pai-xu-by-jingguangyan-yrjm/)
 
+## 全部代码
+
+<RecoDemo>
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/1832.判断句子是否为全字母句.js
+  </template>
+</RecoDemo>
