--- a/blog/algorithm/1833-雪糕的最大数量.md
+++ b/blog/algorithm/1833-雪糕的最大数量.md
@@ -96,4 +96,10 @@ var maxIceCream = function (costs, coins) {
 如果你对题解中的代码有不一样的优化意见，也欢迎你在 issue 中指出～
 最重要的是不要忘了点点关注嗷（[Github](https://github.com/KimYangOfCat)、[力扣](https://leetcode-cn.com/u/kimyang/)），以便获取我最新的题解以及文章通知。
 
+## 全部代码
 
+<RecoDemo>
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/1833.雪糕的最大数量.js
+  </template>
+</RecoDemo>
