--- a/blog/algorithm/53-最大子序和.md
+++ b/blog/algorithm/53-最大子序和.md
@@ -281,3 +281,10 @@ var maxSubArray = function(nums) {
 
 本文部分内容参考了以上文章，感谢原作者的创作～
 
+## 全部代码
+
+<RecoDemo>
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/53.最大子序和.js
+  </template>
+</RecoDemo>
