--- a/blog/algorithm/66-加一.md
+++ b/blog/algorithm/66-加一.md
@@ -168,3 +168,10 @@ var plusOne = function(digits) {
 + [JavaScript：超便捷，利用ES10基本类型BigInt来解题](https://leetcode-cn.com/problems/plus-one/solution/javascriptchao-bian-jie-li-yong-es10ji-ben-lei-xin/)
 + [18 - 加一](https://leetcode-cn.com/problems/plus-one/solution/18-jia-yi-by-joeyzhouyicheng/)
 
+## 全部代码
+
+<RecoDemo>
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/66.加一.js
+  </template>
+</RecoDemo>
