--- a/blog/algorithm/70-爬楼梯.md
+++ b/blog/algorithm/70-爬楼梯.md
@@ -226,3 +226,10 @@ var climbStairs = function(n) {
 + [「手画图解」详解爬楼梯问题 | 从递归，讲到动态规划](https://leetcode-cn.com/problems/climbing-stairs/solution/cong-zhi-jue-si-wei-fen-xi-dong-tai-gui-hua-si-lu-/)
 + [70. 爬楼梯](https://leetcode-cn.com/problems/climbing-stairs/solution/70-pa-lou-ti-by-alexer-660/)
 
+## 全部代码
+
+<RecoDemo>
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/70.爬楼梯.js
+  </template>
+</RecoDemo>
