:memo: update algorithm and src

--- a/blog/algorithm/1779-找到最近的有相同x或y坐标的点.md
+++ b/blog/algorithm/1779-找到最近的有相同x或y坐标的点.md
@@ -141,3 +141,10 @@ var nearestValidPoint = function(x, y, points) {
 
 以上就是本题的所有题解啦，感谢你能看到这里，如果本文对你有所帮助的话，别忘了给一个点赞三连嗷～当然如果你对题解中的代码有不一样的优化意见，也欢迎你在评论区指出～
 
+## 全部代码
+
+<RecoDemo :collapse="true">
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/js/1779.找到最近的有相同-x-或-y-坐标的点.js
+  </template>
+</RecoDemo>
