--- a/blog/algorithm/1833-雪糕的最大数量.md
+++ b/blog/algorithm/1833-雪糕的最大数量.md
@@ -98,8 +98,8 @@ var maxIceCream = function (costs, coins) {
 
 ## 全部代码
 
-<RecoDemo>
+<RecoDemo :collapse="true">
   <template slot="code-js">
-    <<< @/blog/algorithm/src/1833.雪糕的最大数量.js
+    <<< @/blog/algorithm/src/js/1833.雪糕的最大数量.js
   </template>
 </RecoDemo>
