--- a/blog/algorithm/35-搜索插入位置.md
+++ b/blog/algorithm/35-搜索插入位置.md
@@ -220,5 +220,10 @@ function binarySearch(left, right, nums, target) {
     }
 }
 ```
+## 全部代码
 
-最后，如果本文对你有所帮助的话，不要忘了给我点赞三连嗷～感谢！
+<RecoDemo :collapse="true">
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/js/35.搜索插入位置.js
+  </template>
+</RecoDemo>
