--- a/blog/algorithm/53-最大子序和.md
+++ b/blog/algorithm/53-最大子序和.md
@@ -283,8 +283,8 @@ var maxSubArray = function(nums) {
 
 ## 全部代码
 
-<RecoDemo>
+<RecoDemo :collapse="true">
   <template slot="code-js">
-    <<< @/blog/algorithm/src/53.最大子序和.js
+    <<< @/blog/algorithm/src/js/53.最大子序和.js
   </template>
 </RecoDemo>
