--- a/blog/algorithm/58-最后一个单词的长度.md
+++ b/blog/algorithm/58-最后一个单词的长度.md
@@ -100,7 +100,7 @@ var lengthOfLastWord = function(s) {
 执行用时: 64 ms
 内存消耗: 37.7 MB
  */
-var lengthOfLastWord = function(s) 
+var lengthOfLastWord = function(s) {
     //分割后空数组全部筛去
     let words = s.split(' ').filter((item)=>item != '')
     //注意如果原数组全部为空格，筛选后words为空数组
@@ -148,3 +148,11 @@ var lengthOfLastWord = function(s) {
 + [画解算法：58. 最后一个单词的长度](https://leetcode-cn.com/problems/length-of-last-word/solution/hua-jie-suan-fa-58-zui-hou-yi-ge-dan-ci-de-chang-d/)
 + [JS 一行代码两种方法 时间超过85%](https://leetcode-cn.com/problems/length-of-last-word/solution/js-yi-xing-dai-ma-liang-chong-fang-fa-shi-jian-cha/)
 + [用filter啊](https://leetcode-cn.com/problems/length-of-last-word/solution/yong-filtera-by-csdcj-0u3p/)
+
+## 全部代码
+
+<RecoDemo :collapse="true">
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/js/58.最后一个单词的长度.js
+  </template>
+</RecoDemo>
