--- a/blog/algorithm/1832-判断句子是否为全字母句.md
+++ b/blog/algorithm/1832-判断句子是否为全字母句.md
@@ -218,8 +218,8 @@ var checkIfPangram = function (sentence) {
 
 ## 全部代码
 
-<RecoDemo>
+<RecoDemo :collapse="true">
   <template slot="code-js">
-    <<< @/blog/algorithm/src/1832.判断句子是否为全字母句.js
+    <<< @/blog/algorithm/src/js/1832.判断句子是否为全字母句.js
   </template>
 </RecoDemo>
