--- a/blog/algorithm/38-外观数列.md
+++ b/blog/algorithm/38-外观数列.md
@@ -318,3 +318,11 @@ var countAndSay = function(n) {
 2. 如何统计相邻相同数字的长度？使用双指针还是正则匹配？
 
 最后，如果本文对你有所帮助的话，不要忘了给我点赞三连嗷～感谢
+
+## 全部代码
+
+<RecoDemo :collapse="true">
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/js/38.外观数列.js
+  </template>
+</RecoDemo>
