--- a/blog/algorithm/66-加一.md
+++ b/blog/algorithm/66-加一.md
@@ -170,8 +170,8 @@ var plusOne = function(digits) {
 
 ## 全部代码
 
-<RecoDemo>
+<RecoDemo :collapse="true">
   <template slot="code-js">
-    <<< @/blog/algorithm/src/66.加一.js
+    <<< @/blog/algorithm/src/js/66.加一.js
   </template>
 </RecoDemo>
