--- a/blog/algorithm/690-员工的重要性.md
+++ b/blog/algorithm/690-员工的重要性.md
@@ -151,3 +151,11 @@ var GetImportance = function(employees, id) {
 + [JavaScript 深度优先搜索（DFS）+广度优先搜索（BFS）](https://leetcode-cn.com/problems/employee-importance/solution/javascript-shen-du-you-xian-sou-suo-dfsyan-du-you-/)
 + [员工的重要性](https://leetcode-cn.com/problems/employee-importance/solution/yuan-gong-de-zhong-yao-xing-by-leetcode-h6xre/)
 + [循环 + 递归](https://leetcode-cn.com/problems/employee-importance/solution/xun-huan-di-gui-by-siwen19/)
+
+## 全部代码
+
+<RecoDemo :collapse="true">
+  <template slot="code-js">
+    <<< @/blog/algorithm/src/js/690.员工的重要性.js
+  </template>
+</RecoDemo>
