--- a/blog/algorithm/70-爬楼梯.md
+++ b/blog/algorithm/70-爬楼梯.md
@@ -228,8 +228,8 @@ var climbStairs = function(n) {
 
 ## 全部代码
 
-<RecoDemo>
+<RecoDemo :collapse="true">
   <template slot="code-js">
-    <<< @/blog/algorithm/src/70.爬楼梯.js
+    <<< @/blog/algorithm/src/js/70.爬楼梯.js
   </template>
 </RecoDemo>
