:memo: update articles

--- a/blog/articles/50-别让轮播毁了你的应用程序.md
+++ b/blog/articles/50-别让轮播毁了你的应用程序.md
@@ -7,7 +7,7 @@ publish: true
 ---
 
 ![](https://cdn-images-1.medium.com/max/5760/1*hRv4pMYj7sioqL2FJ2Ww8w.jpeg)
-
+<!-- more -->
 时至今日，轮播在 web 应用程序被广泛地用作为幻灯片组件，用于将一个集合中的元素循环播放。
 
 > 虽然轮播能使你的应用程序变得独特，但它可能会造成可用性上的问题，并降低应用程序的性能。
