:building_construction: update all imgs URL

--- a/blog/articles/13-408.md
+++ b/blog/articles/13-408.md
@@ -66,7 +66,7 @@ categories: [📗 学习笔记]
 
 首先什么是[笔记博客](http://408.kimyang.cn)？其实就是将自己写的 Markdown 笔记文件利用静态博客生成工具生成静态资源发布到 GitHub Pages ，与其他项目的静态文档和许多同学的静态博客使用的是类似的技术路线。
 
-![image-20200917010013130](https://tva1.sinaimg.cn/large/007S8ZIlly1giszffmgmyj31l80u0gx3.jpg)
+![image-20200917010013130](https://picbed.kimyang.cn/202109050806592.jpg)
 
 #### 静态博客生成工具
 
@@ -78,7 +78,7 @@ categories: [📗 学习笔记]
 
 作为一个开源项目，最不能缺少的就是一个给各位同学讨论的平台，但是我们的笔记博客是基于 GitHub Pages 的，它没有后端。所以只能考虑那些基于 GitHub issues 的评论系统，其中名气最大的应该便是 [Gitalk](https://gitalk.github.io/) 了。但是我曾经使用过它，再用一次总感觉没什么意思，于是经过我的一番查找，我终于找到了一个新的基于 Vue 开发的功能更强大的评论系统——[Vssue](https://vssue.js.org/)，并且它还原生支持 `VuePress`，这还有什么理由不用它，淦～于是，同学们有了可以夸我的留言板，嘿嘿 😀 ！
 
-![image-20200917011042307](https://tva1.sinaimg.cn/large/007S8ZIlly1giszqcfsszj31sz0u0tga.jpg)
+![image-20200917011042307](https://picbed.kimyang.cn/202109050806593.jpg)
 
 ### Logo 设计
 
