--- a/blog/articles/24-如何打造可被摇树优化的库.md
+++ b/blog/articles/24-如何打造可被摇树优化的库.md
@@ -5,7 +5,7 @@ tags: [webpack]
 categories: [🌏 翻译校对]
 ---
 
-![如何打造可被摇树优化的库](https://blog.theodo.com/static/dfae80d02f29938244fa328765a243a9/a79d3/tree-shaking.png)
+![如何打造可被摇树优化的库](https://picbed.kimyang.cn/202109050832928.png)
 
 在 [Theodo](https://www.theodo.fr)，我们致力于为我们的客户打造可靠、快速的应用。我们有一些改进现有应用的性能的项目。在其中一个项目里，**我们通过对内部库进行摇树优化（tree shaking），成功将所有页面的 gzip 压缩后的 bundle 体积减少了足足 500KB。**
 <!-- more -->
@@ -36,7 +36,7 @@ categories: [🌏 翻译校对]
 
 网上有很多解释摇树优化和未引用代码移除的文章和资源。这里我们会集中讨论那些应用里中引用的库。当引用一个库的应用能够**成功地移除这个库中未被引用的部分**时，这个库才能被认为做到了摇树优化（tree shakeable）。
 
- [![一个可摇树优化的库的例子](https://github.com/darkyzhou/blog/raw/master/static/images/uploads/tree-shaking-1.png) 
+ [![一个可摇树优化的库的例子](https://picbed.kimyang.cn/202109050832922.png) 
 
 在尝试让一个库变得可被摇树优化之前，我们先来看看如何识别一个可摇树优化的库。
 
