--- a/blog/articles/45-使用人工智能-机器学习构建文章推荐引擎.md
+++ b/blog/articles/45-使用人工智能-机器学习构建文章推荐引擎.md
@@ -6,7 +6,7 @@ categories: [🌏 翻译校对]
 publish: true
 ---
 
-![Photo by [Markus Winkler](https://unsplash.com/@markuswinkler?utm_source=medium&utm_medium=referral) on [Unsplash](https://unsplash.com?utm_source=medium&utm_medium=referral)](https://cdn-images-1.medium.com/max/7998/0*-gsFtRSjNAsy-v6K)
+![](https://picbed.kimyang.cn/202109050846805.jpeg)
 
 内容平台在向用户推荐相关内容方面发展迅速。平台提供的相关内容越多，用户在网站上停留的时间就越长，而这通常会转化为公司的广告收入。
 
@@ -21,7 +21,7 @@ publish: true
 
 下面的简短动画演示了我们的应用程序是如何工作的。最初有十篇文章显示在页面上。用户可以选择任意组合这十篇文章来代表他们的阅读历史。当用户点击提交按钮时，阅读历史将作为输入数据，用以查询文章数据库，然后再向用户显示十篇相关文章。
 
-![演示应用 —— 文章推荐引擎](https://cdn-images-1.medium.com/max/2000/0*jWMKM_QD7TRXYOJK)
+![演示应用 —— 文章推荐引擎](https://picbed.kimyang.cn/202109050846027.gif)
 
 可以看到，返回的相关文章非常准确！在此示例中，有 1,024 种可能的阅读历史组合可用作输入，并且每种组合都会产生有意义的结果。
 
@@ -204,7 +204,7 @@ app.run()
 
 对于视觉学习者，这里提供一个概述应用程序如何工作的图表：
 
-![应用架构和用户体验](https://cdn-images-1.medium.com/max/2000/0*9S_7iYqcW3eTghUP)
+![应用架构和用户体验](https://picbed.kimyang.cn/202109050846053.png)
 
 ## 示例场景
 
