--- a/blog/articles/47-关于分布式追踪的事项.md
+++ b/blog/articles/47-关于分布式追踪的事项.md
@@ -28,7 +28,7 @@ publish: true
 
 这使得调试变成了一个繁琐、复杂的任务。此外，观察单一事务也不容易。你不能只依赖单个系统的堆栈追踪，因为代码在多个系统上执行。
 
-![一个包含多个解耦操作的分布式系统](https://cdn-images-1.medium.com/max/2000/1*bbZZ4DGzS9FY3o-Q0WhfwA.png)
+![一个包含多个解耦操作的分布式系统](https://picbed.kimyang.cn/202109050846535.png)
 
 通过查看 AWS 上一些虚构架构的示例，我们看到在不同的系统中有很多代码只是一个外部触发器。
 
@@ -38,7 +38,7 @@ publish: true
 
 尽管操作似乎是解耦的，但它们通常与同一个触发器相关，因此从业务的角度来看是耦合的。你通常需要关联整个业务流程中包含的每个操作才能把问题解决。
 
-![一个横跨多个系统，多个独立团队的进程](https://cdn-images-1.medium.com/max/2000/1*SHMu84OF4Eg-6eZhqaUugw.png)
+![一个横跨多个系统，多个独立团队的进程](https://picbed.kimyang.cn/202109050846744.png)
 
 如果你正在处理一个多团队项目，并且产品是由独立团队开发的，那就更明显了。事实上，每个团队都会监控自己负责的资源和微服务。但是，如果客户抱怨请求缓慢，但没有团队报告任何性能瓶颈时该怎么办？如果请求没有团队总体的相关性，你就不可能详细地调查这些问题。
 
@@ -48,7 +48,7 @@ publish: true
 
 如果要在多个系统上追踪你的请求，则需要收集路由上每一步的数据。
 
-![多个服务上的 Web 事务，将上下文信息发送到追踪收集器](https://cdn-images-1.medium.com/max/2000/1*jHsAJgif51Gw6ZgvJb9scw.png)
+![多个服务上的 Web 事务，将上下文信息发送到追踪收集器](https://picbed.kimyang.cn/202109050847623.png)
 
 我们的浏览器在我们的示例中提交了第一个请求，开始了整个操作的追踪上下文。它需要发送请求本身并附加有关上下文的更多信息，以便你的追踪收集器可以稍后关联请求。所有后续系统都可以通过添加有关它们执行的代码的详细信息来扩展它。
 
@@ -77,7 +77,7 @@ publish: true
 
 这意味着，我们生态系统中涉及请求的每个组件都应至少贡献一个跨度。由于跨度可以引用其他跨度，我们可以利用这些跨度来建立一个完整的堆栈追踪，以覆盖单个请求中的所有操作。跨度的精细程度不限。我们可以在任何地方使用它，不论是整个复杂的流程，或是单个功能/操作的跨度。
 
-![一个涵盖了 DynamoDB 查询操作的 span，包含名称和时间戳](https://cdn-images-1.medium.com/max/2000/1*1pu963Zo2U-ZisazG_XC_A.png)
+![一个涵盖了 DynamoDB 查询操作的 span，包含名称和时间戳](https://picbed.kimyang.cn/202109050847791.png)
 
 ### Scopes 和 Threading
 
@@ -96,7 +96,7 @@ publish: true
 
 `traceparent` 标头携带四种不同类型的信息：版本、追踪标识符、父标识符和标志。
 
-![`traceparent` HTTP 标头的示例](https://cdn-images-1.medium.com/max/2000/1*qBXxYI9Qo_8RcohWoRegUQ.png)
+![`traceparent` HTTP 标头的示例](https://picbed.kimyang.cn/202109050847543.png)
 
 * 版本 — 标识版本，当前为 `00`。
 * TraceID — 分布式追踪的唯一标识符。
@@ -111,7 +111,7 @@ publish: true
 
 看看一个 NewRelic 的例子 :
 
-![由 NewRelic 发送的 `tracestate` HTTP 标头示例](https://cdn-images-1.medium.com/max/2000/1*V5wa57TXTNpOEkE_fKkczw.png)
+![由 NewRelic 发送的 `tracestate` HTTP 标头示例](https://picbed.kimyang.cn/202109050847098.png)
 
 我们可以识别父级、span 的时间戳以及我们的供应商。 追踪状态标头可以携带哪些信息或它必须是什么样子都没有固定的规则，因此它可能会因你使用的跟踪工具而有很大差异。
 
@@ -123,7 +123,7 @@ publish: true
 
 让我们看一个基本场景，其中我们想要添加到分布式追踪中的系统仅通过调用另一个外部调用来执行次要业务逻辑。
 
-![](https://cdn-images-1.medium.com/max/2000/1*0o2lIGelr9JtVRFVfuO9ZQ.png)
+![](https://picbed.kimyang.cn/202109050847317.png)
 
 我们的示例非常简单，因此我们必须采取的基本步骤也相当简单：
 
@@ -134,7 +134,7 @@ publish: true
 
 我们可以在单个系统中根据需要打开任意数量的 span。我们只需要确保我们正确嵌套它们并分别关闭它们。因此我们需要手动执行追踪 span 堆栈。
 
-![](https://cdn-images-1.medium.com/max/2000/1*7dx9dp0v8bjChH7zWjxAbg.png)
+![](https://picbed.kimyang.cn/202109050847393.png)
 
 ### 设置我们的追踪器
 
@@ -172,7 +172,7 @@ if (!traceParent) {
 * 一个保存跨度必要细节的对象：打开它时的时间戳和跨度的标识符
 * 一个保存 span 必要细节的对象：打开它时的时间戳和 span 的标识符
 
-![](https://cdn-images-1.medium.com/max/2000/1*ZWcuiszwgPfliOMPRAbOVg.png)
+![](https://picbed.kimyang.cn/202109050847272.png)
 
 我们的根 span 仅用于追踪我们的追踪器标识符。最重要的是，我们将追踪我们打开的所有 span，并在操作或流程完成时删除每个 span。
 
