--- a/blog/articles/50-别让轮播毁了你的应用程序.md
+++ b/blog/articles/50-别让轮播毁了你的应用程序.md
@@ -6,7 +6,7 @@ categories: [🌏 翻译校对]
 publish: true
 ---
 
-![](https://cdn-images-1.medium.com/max/5760/1*hRv4pMYj7sioqL2FJ2Ww8w.jpeg)
+![](https://picbed.kimyang.cn/202109050848537.jpeg)
 <!-- more -->
 时至今日，轮播在 web 应用程序被广泛地用作为幻灯片组件，用于将一个集合中的元素循环播放。
 
@@ -56,7 +56,7 @@ publish: true
 
 此外，轮播中的小箭头/图标使得移动端的用户和有障碍的人士难以导航。
 
-![一个不佳的轮播示例。来源：[nngroup](https://www.nngroup.com/articles/auto-forwarding/)，作者：[Jakob Nielsen](https://www.nngroup.com/articles/author/jakob-nielsen/)](https://cdn-images-1.medium.com/max/3840/1*JKO7mieZ-6I_p84CI_obCw.png)
+![一个不佳的轮播示例](https://picbed.kimyang.cn/202109050849618.png)
 
 > 图中文字注解：自动播放的轮播和扩展面板组件会使用户厌烦并且降低可见度。
 
@@ -102,7 +102,7 @@ publish: true
 
 提供一些关于幻灯片数量和下一页内容的资讯。这使得用户能更轻松地浏览内容，提高用户参与度。
 
-![在 [Hilton](https://www.hilton.com/en/) 网页上的轮播](https://cdn-images-1.medium.com/max/3786/1*B-yLIKw-RnEbHx8P7lYUcQ.png)
+![在 Hilton 网页上的轮播](https://picbed.kimyang.cn/202109050849731.png)
 
 在上方的示例中，轮播中包含极少的幻灯片，并带有指示用户进度的导航控件。
 
