--- a/blog/articles/7-网络问题一次解决.md
+++ b/blog/articles/7-网络问题一次解决.md
@@ -10,7 +10,7 @@ categories: [🔑 奇妙技巧]
 
 首先来看遇到的问题:
 
-![各种网络报错](https://imgconvert.csdnimg.cn/aHR0cHM6Ly90dmExLnNpbmFpbWcuY24vbGFyZ2UvMDA4Mnp5YnBneTFnYnplODk3dHV3ajMwamswZXR3ZjUuanBn?x-oss-process=image/format,png)
+![各种网络报错](https://picbed.kimyang.cn/202109050823960.jpeg)
 
 不仅仅是在游览器中如此，在终端中运行 wget 和 curl 亦是如此。。。甚至git push 一段代码都会被卡～
 
