:boom: update artices  source

--- a/blog/articles/40-常见的社会工程攻击策略.md
+++ b/blog/articles/40-常见的社会工程攻击策略.md
@@ -168,13 +168,12 @@ categories: [🌏 翻译校对]
 * 定期举行“路演”简报会，解释最新的攻击趋势。 确保所有级别的员工都参加这些简报会，包括高级管理人员和对金融交易有权力的人。
 * 聘请外部独立安全团队来审核你公司的安全。这些审计应定期进行。
 
----
-
 我们必须保持适当的安全措施，以避免自己和公司陷入困境。正如我们在上面看到的，这些攻击的代价可能非常高。我们有责任保护自己不被潜伏在周围的邪恶眼睛所盯上。
 
-> * 原文地址：[Common Social Engineering Attack Strategies](https://blog.bitsrc.io/common-social-engineering-attack-strategies-23357db3d2d5)
-> * 原文作者：[Alicia Jones](https://medium.com/@alicia1990jones)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md](https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md)
-> * 译者：[jaredliw](https://github.com/jardliw)
-> * 校对者：[Kim Yang](https://github.com/KimYangOfCat)，[PingHGao](https://github.com/PingHGao)
+---
+ * 原文地址：[Common Social Engineering Attack Strategies](https://blog.bitsrc.io/common-social-engineering-attack-strategies-23357db3d2d5)
+ * 原文作者：[Alicia Jones](https://medium.com/@alicia1990jones)
+ * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+ * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md](https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md)
+ * 译者：[jaredliw](https://github.com/jardliw)
+ * 校对者：[Kim Yang](https://github.com/KimYangOfCat)，[PingHGao](https://github.com/PingHGao)
