--- a/blog/articles/45-使用人工智能-机器学习构建文章推荐引擎.md
+++ b/blog/articles/45-使用人工智能-机器学习构建文章推荐引擎.md
@@ -224,9 +224,10 @@ app.run()
 
 相似性搜索有助于为你的用户提供更好的建议。而 Pinecone，作为一个相似性搜索的服务方，可使你能轻松地向用户提供推荐，以便您可以专注于自己最擅长的事情 —— 构建一个充满值得阅读的内容的优质平台。
 
-> * 原文地址：[Build an Article Recommendation Engine With AI/ML](https://betterprogramming.pub/build-an-article-recommendation-engine-with-ai-ml-c6e931e34d3b)
-> * 原文作者：[Tyler Hawkins](https://medium.com/@thawkin3)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md](https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md)
-> * 译者：[jaredliw](https://github.com/jaredliw)
-> * 校对者：[greycodee](https://github.com/greycodee)、[KimYangOfCat](https://github.com/KimYangOfCat)
+---
+ * 原文地址：[Build an Article Recommendation Engine With AI/ML](https://betterprogramming.pub/build-an-article-recommendation-engine-with-ai-ml-c6e931e34d3b)
+ * 原文作者：[Tyler Hawkins](https://medium.com/@thawkin3)
+ * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+ * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md](https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md)
+ * 译者：[jaredliw](https://github.com/jaredliw)
+ * 校对者：[greycodee](https://github.com/greycodee)、[KimYangOfCat](https://github.com/KimYangOfCat)
