--- a/blog/articles/46-修订后的参与TC39标准委员会的模式.md
+++ b/blog/articles/46-修订后的参与TC39标准委员会的模式.md
@@ -53,9 +53,10 @@ categories: [🌏 翻译校对]
 * <sup>1</sup>： 亚历克斯·罗素的 [穿针引线](https://infrequently.org/2018/06/effective-standards-work-part-2-threading-the-needle/)
 * <sup>2</sup>：大多数的定义因组织而异。它通常需要三分之二或更多的投票来通过一个问题。
 
-> * 原文地址：[Revised Patterns for Participation in Standards Committees](https://medium.com/@jorydotcom/revised-patterns-for-participation-in-standards-committees-dae82d93954e)
-> * 原文作者：[Jory Burson](https://medium.com/@jorydotcom)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md](https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md)
-> * 译者：[洛竹](https://github.com/youngjuning)
-> * 校对者：[KimYangOfCat](https://github.com/KimYangOfCat)，[qq1120637483](https://github.com/qq1120637483)
+---
+ * 原文地址：[Revised Patterns for Participation in Standards Committees](https://medium.com/@jorydotcom/revised-patterns-for-participation-in-standards-committees-dae82d93954e)
+ * 原文作者：[Jory Burson](https://medium.com/@jorydotcom)
+ * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+ * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md](https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md)
+ * 译者：[洛竹](https://github.com/youngjuning)
+ * 校对者：[KimYangOfCat](https://github.com/KimYangOfCat)，[qq1120637483](https://github.com/qq1120637483)
