--- a/blog/articles/47-关于分布式追踪的事项.md
+++ b/blog/articles/47-关于分布式追踪的事项.md
@@ -269,9 +269,10 @@ const submitTraceInformation = (traceId, spanName, spanId, parentId, duration) =
 
 感谢你的阅读。
 
-> * 原文地址：[Distributed Tracing Matters](https://levelup.gitconnected.com/distributed-tracing-matters-aa003d5adab9)
-> * 原文作者：[Tobias Schmidt](https://medium.com/@tpschmidt)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md](https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md)
-> * 译者：[ItzMiracleOwO](https://github.com/itzmiracleowo)
-> * 校对者：[jaredliw](https://github.com/jaredliw)、[KimYang](https://github.com/KimYangOfCat)
+---
+ * 原文地址：[Distributed Tracing Matters](https://levelup.gitconnected.com/distributed-tracing-matters-aa003d5adab9)
+ * 原文作者：[Tobias Schmidt](https://medium.com/@tpschmidt)
+ * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+ * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md](https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md)
+ * 译者：[ItzMiracleOwO](https://github.com/itzmiracleowo)
+ * 校对者：[jaredliw](https://github.com/jaredliw)、[KimYang](https://github.com/KimYangOfCat)
