--- a/blog/articles/50-别让轮播毁了你的应用程序.md
+++ b/blog/articles/50-别让轮播毁了你的应用程序.md
@@ -134,9 +134,10 @@ publish: true
 
 感谢您的阅读！
 
-> * 原文地址：[Don’t Let Carousels Kill Your Application](https://blog.bitsrc.io/dont-let-carousels-kill-your-application-ba5ce27f6d10)
-> * 原文作者：[Isuri Devindi](https://medium.com/@isuridevindi)
-> * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
-> * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/dont-let-carousels-kill-your-application.md](https://github.com/xitu/gold-miner/blob/master/article/2021/dont-let-carousels-kill-your-application.md)
-> * 译者：[jaredliw](https://github.com/jaredliw)
-> * 校对者：[KimYangOfCat](https://github.com/KimYangOfCat)、[nia3y](https://github.com/nia3y)
+---
+ * 原文地址：[Don’t Let Carousels Kill Your Application](https://blog.bitsrc.io/dont-let-carousels-kill-your-application-ba5ce27f6d10)
+ * 原文作者：[Isuri Devindi](https://medium.com/@isuridevindi)
+ * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+ * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/dont-let-carousels-kill-your-application.md](https://github.com/xitu/gold-miner/blob/master/article/2021/dont-let-carousels-kill-your-application.md)
+ * 译者：[jaredliw](https://github.com/jaredliw)
+ * 校对者：[KimYangOfCat](https://github.com/KimYangOfCat)、[nia3y](https://github.com/nia3y)
