:bug: update pic src

--- a/blog/articles/24-如何打造可被摇树优化的库.md
+++ b/blog/articles/24-如何打造可被摇树优化的库.md
@@ -176,7 +176,7 @@ __webpack_unused_export__ = getUserPhoneNumber;
 
 Webpack 将我们所有的代码重新组织到了同一个文件里。请看其中的 `getUserPhoneNumer` 导出项，注意到 Webpack 将它标记为了未引用。它会在生产模式下被移除，而 `getUserName` 则会被保留，因为它被我们的入口文件 `index.js` 所使用。
 
-![一个摇树优化后的库对应的一张简单的模块图](https://github.com/darkyzhou/blog/raw/master/static/images/uploads/tree-shaking-2.svg)
+![使用 ESM 格式的库的导出模块图](https://picbed.kimyang.cn/202111060227679.jpeg)
 
 我们的库被摇树优化了！你可以再写一些导入项，重复上面的步骤再查看输出的代码。**我们的目的是知道 Webpack 会把我们库里没有被引用的代码标记为未引用。**
 
@@ -328,7 +328,7 @@ const userAccount = {
 
 注意，`getUserAccount` 和 `getUserPhoneNumber` 都被标记为了未引用。而且另一个文件里的 `userAccount` 也被标记了。得益于 `innerGraph` 优化，Webpack 能够将 `index.js` 文件里的 `getUserAccount` 导入项链接到 `userAccount` 导出项。**这让 Webpack 可以从入口文件开始，递归遍历它所有的依赖，进而知道每一个模块的哪些导出项未被引用。** 因为 Webpack 知道 `getUserAccount` 没有被使用，所以它可以到 `userAccount` 文件里对 `getUserAccount` 的依赖做相同的检查。
 
-![使用 ESM 格式的库的导出模块图](https://github.com/darkyzhou/blog/raw/master/static/images/uploads/tree-shaking-3.svg)
+![使用 ESM 格式的库的导出模块图](https://picbed.kimyang.cn/202111060235702.jpeg)
 
 ES 模块让我们可以在应用代码里寻找那些被引用的和未被引用的导出项，这也解释了为什么这种模块系统对于摇树优化是如此的重要。它还解释了为什么我们应该使用像 [`lodash-es`](https://www.npmjs.com/package/lodash-es) 这样导出了兼容 ESM 的构建产物的依赖。这里 lodash-es 库是很受欢迎的 [`lodash`](https://lodash.com/) 库的 ESM 版本。
 
@@ -410,7 +410,7 @@ import "myPolyfill";
 
 我们发现，源文件 `userAccount` 已经在打包输出中被移除了。我们仍然能够看到 `getUserAccount` 函数在引用 `userAccount`，不过此函数已经被 Webpack 标记为了未引用代码，它会在代码最小化的过程中被移除。
 
-![副作用优化下的模块图](https://github.com/darkyzhou/blog/raw/master/static/images/uploads/tree-shaking-4.svg)
+![副作用优化下的模块图](https://picbed.kimyang.cn/202111060236300.jpeg)
 
 ** `sideEffects` 选项对于那些通过一个 index 文件从其他内部源文件导出 API 的库尤其重要。** 如果没有副作用优化，打包工具就必须解析所有包含导出项的源文件。
 
@@ -594,7 +594,7 @@ const getUserName = () => 'John Doe';
 
 [Lodash](https://lodash.com/) 现在和 `userAccount` 模块一起被略过了。
 
-![在使用 CJS 格式的依赖时，保留模块结构能够改善摇树优化效果](https://raw.githubusercontent.com/darkyzhou/blog/master/static/images/uploads/tree-shaking-5.svg)
+![在使用 CJS 格式的依赖时，保留模块结构能够改善摇树优化效果](https://picbed.kimyang.cn/202111060239769.jpeg)
 
 #### 代码分割
 
@@ -735,7 +735,7 @@ main();
 
 我们需要记住，引用导出（used exports）优化在检查导出项是否被引用的时候，是在模块层面上检查的。只有从这个层面上 Webpack 才能移除那些未被使用的代码。对于我们的库模块来说，`userAccount` 和 `userPhoneNumber` 其实都被使用了。在这个情况下，Webpack 并不能区分清 `userService1` 和 `userService2` 在导入项上的区别，正如下图所示（你会发现 `userAccount` 和 `userPhoneNumber` 都被标注为绿色）：
 
-![代码分割导致摇树优化出现的问题](https://raw.githubusercontent.com/darkyzhou/blog/master/static/images/uploads/tree-shaking-6.svg)
+![代码分割导致摇树优化出现的问题](https://picbed.kimyang.cn/202111060242009.jpeg)
 
 **这意味着 [Webpack](https://webpack.js.org/) 在仅依靠引用导出优化的条件下，并不能独立地针对每个 chunk 进行摇树优化。**
 
@@ -803,7 +803,7 @@ main();
 
 `src_userService1_js.main.js` 也和上面类似，仅仅包含了我们库里的 `userAccount` 模块。
 
-![保留模块树可以让 Webpack 独立地对分割的 chunk 进行摇树优化](https://raw.githubusercontent.com/darkyzhou/blog/master/static/images/uploads/tree-shaking-7.svg)
+![保留模块树可以让 Webpack 独立地对分割的 chunk 进行摇树优化](https://picbed.kimyang.cn/202111060244091.jpeg)
 
 在上图中我们看到，`userAccount` 和 `userPhoneNumber` 仍然被识别为**被引用的导出项**，毕竟它们都在应用里被引用了至少一次。不过，这一次副作用优化让 Webpack 得以略过 `userAccount` 模块，因为它从未被 `userService2` 所导入。同样的事情也发生在了 `userPhoneNumber` 和 `userService1` 之间。
 
